# pitchenga

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  LICENSE  README.md  create-dmg.sh  create-mac-pkg.sh  create-mas-pkg.sh  create-pkg.sh  generate_timestamp.cmake  installer.iss  local-mas-test.sh  mas-local-test.sh  mas-testflight.sh  version.cmake  version.sh
.gemini/: config.yaml  styleguide.md
.github/workflows/: bump-version.yaml  create-production-pr.yml  create-review-pr.yml  gemini-review.yml  release.yaml
.run/: Pitchenga.run.xml  Pitchenga_AU.run.xml  Pitchenga_AU2.run.xml  Pitchenga_All.run.xml  Pitchenga_All2.run.xml  Pitchenga_Standalone.run.xml  Pitchenga_VST3.run.xml  Pitchenga_vst3_helper.run.xml
Source/: Agc.cpp  Agc.h  Analyzers.cpp  Analyzers.h  CircleVisualizer.cpp  CircleVisualizer.h  CircleViz.cpp  CircleViz.h  ColorPalette.cpp  ColorPalette.h  Common.h  Control.cpp  Control.h  Cqt.cpp  Cqt.h  CqtEngine.cpp  CqtEngine.h  DesktopAudioCapture.cpp  DesktopAudioCapture.h  DesktopAudioCapture.mm  Eye.cpp  LineTuner.cpp  LineTuner.h  LineViz.cpp  LineViz.h  Math.cpp  Math.h  MathWorker.cpp  MathWorker.h  Palette.cpp  Palette.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Splitter.cpp  Splitter.h  SplitterBar.cpp  SplitterBar.h  StandaloneApp.cpp  (+19 more)
Source/math/: Agc.cpp  Analyzers.cpp  Cqt.cpp  Cqt.h  Math.cpp  Math.h  PitchDetector.h  Stft.cpp  Stft.h
Source/ui/: Control.cpp  Control.h  CqtRoll.cpp  CqtRoll.h  Eye.cpp  Eye.h  EyePiano.cpp  EyePiano.h  Needle.cpp  Needle.h  Roll.cpp  Roll.h  RollCqt.cpp  RollCqt.h  RollStft.cpp  RollStft.h  Splitter.cpp  Splitter.h  StftRoll.cpp  StftRoll.h  TheRoll.cpp  TheRoll.h  TheTuna.cpp  TheTuna.h  Tuna.cpp  Tuna.h
doc/: 00-plan.md  02-poc.md  02-port-java-pipeline.md  03-line-tuner.md  04-line-viz.md  04-line-vizualizer.md  05-decimation-pitch.md  06-mini-daw.md  07-desktop-capture.md  Mac Audio Interface Sleep Wake Fix.md  amd64.md  compare-prompt.md  compare-report.md  crash.txt  crash2.md  gradient.md  init.md  notary.md  plan.md  reset-logic.md  step1.md  velocity_issue_report.md
java/com/harmoneye/analysis/: HarmonicPatternPitchClassDetector.java  MusicAnalyzer.java
java/com/harmoneye/app/: AbstractHarmonEyeApp.java
java/com/harmoneye/audio/: AutomaticGainControl.java  ByteConverter.java  Capture.java  SoundConsumer.java
java/com/harmoneye/viz/: OpenGlCircularVisualizer.java
java/com/pitchenga/: Pitchenga.java  Player.java  Ptchng.java
